[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/items/key_b.png" type="Texture" id=1]
[ext_resource path="res://game_items/Key.gd" type="Script" id=2]
[ext_resource path="res://assets/light/light5.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 208.154

[sub_resource type="Animation" id=2]
resource_name = "nearby"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 2, 2, 2, 1 ), Color( 5, 5, 5, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "pulsating"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 2, 2, 2, 1 ), Color( 2, 0, 0, 1 ), Color( 2, 2, 2, 1 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "nearby"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "pulsating"

[sub_resource type="AnimationNodeStateMachineTransition" id=6]

[sub_resource type="AnimationNodeStateMachineTransition" id=7]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=8]
states/nearby/node = SubResource( 4 )
states/nearby/position = Vector2( 587, 119 )
states/pulsating/node = SubResource( 5 )
states/pulsating/position = Vector2( 343, 119 )
transitions = [ "pulsating", "nearby", SubResource( 6 ), "nearby", "pulsating", SubResource( 7 ) ]
start_node = "pulsating"

[sub_resource type="AnimationNodeStateMachinePlayback" id=9]

[node name="Key_B" type="Area2D" groups=[
"key",
]]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
light_mask = 3
margin_left = -288.0
margin_top = -272.0
margin_right = 248.0
margin_bottom = 272.0
color = Color( 0.32549, 0.623529, 0.231373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pick_area" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 2, 1.7649, 1.7649, 1 )
position = Vector2( -10, 0 )
scale = Vector2( 6, 6 )
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
texture_scale = 5.85
mode = 2
range_item_cull_mask = 2
shadow_item_cull_mask = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/nearby = SubResource( 2 )
anims/pulsating = SubResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 9 )

[connection signal="body_entered" from="." to="." method="_on_Key_A_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Key_A_body_exited"]
